@@ -1,5 +1,11 @@
 2007-09-27  Xavier Claessens  <xclaesse@gmail.com>
 
+	* libempathy/empathy-avatar.c: Fix leak when loading avatar from cache.
+	* libempathy/empathy-contact-factory.c: Do not request avatar for
+	unknown tokens, wait for AvatarUpdate signal.
+
+2007-09-27  Xavier Claessens  <xclaesse@gmail.com>
+
 	* libempathy-gtk/empathy-profile-chooser.c: Set the sort function before
 	begin to sort otherwise we get warnings.
 
